--- a/netlify.toml
+++ b/netlify.toml
@@ -2,10 +2,18 @@
   publish = "public"
   functions = "netlify/functions"
 
+[functions]
+  node_bundler = "esbuild"
+  external_node_modules = ["firebase-admin"]
+
 [[redirects]]
-  from = "/*"
-  to = "/index.html"
+  from = "/.netlify/functions/*"
+  to = "/.netlify/functions/:splat"
   status = 200
+  force = true
+
+[build.environment]
+  NODE_VERSION = "18"
 
 [[headers]]
   for = "/*"
