--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "web-push": "^3.6.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "netlify-cli": "^17.0.0"
   }
 }
