--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "웹푸시 기능 동작 확인용",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "build": "netlify build"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
@@ -15,12 +14,9 @@
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "firebase-admin": "^11.11.1",
-    "web-push": "^3.6.7"
+    "express": "^4.21.2"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
-    "netlify-cli": "^17.0.0"
+    "nodemon": "^3.1.9"
   }
 }
