--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,27 @@
-node_modules
-firebase-key.json
+# environment variables
 .env
 .env.local
+.env.*.local
+
+# Firebase
+firebase-key.json
+**/firebase-adminsdk*.json
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
+
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
 # Local Netlify folder
 .netlify
